--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 Revision history for Perl extension Algorithm::FloodControl.
 
-1.90  Tue Nov 4 04:08:38 2008
+1.91  Wed Nov 5 14:56:01 MSK 2008
+      Params::Validate for all methods
+1.90  Tue Nov 4 04:08:38 MSK 2008
 	  Support for OO. Backends for Cache::Memcached(::Fast), Cache::FastMmap
