Import of GUGU/Algorithm-FloodControl-1.92 from CPAN.
gitpan-cpan-distribution: Algorithm-FloodControl
gitpan-cpan-version:      1.92
gitpan-cpan-path:         GUGU/Algorithm-FloodControl-1.92.tar.gz
gitpan-cpan-author:       GUGU
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Algorithm::FloodControl.
 
+1.92  Чтв Ноя 6 15:49:01 MSK 2008
+      is_user_overrated returns not only true/false, but timeout until unlocking
 1.91  Wed Nov 5 14:56:01 MSK 2008
       Params::Validate for all methods
 1.90  Tue Nov 4 04:08:38 MSK 2008
