Import of GUGU/Algorithm-FloodControl-1.95 from CPAN.
gitpan-cpan-distribution: Algorithm-FloodControl
gitpan-cpan-version:      1.95
gitpan-cpan-path:         GUGU/Algorithm-FloodControl-1.95.tar.gz
gitpan-cpan-author:       GUGU
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Algorithm::FloodControl.
 
-1.92  Чтв Ноя  6 15:56:46 MSK 2008
+1.95  Я хочу есть и спать. А не править баги в этом модуле.
+1.94  Опять проебал
+1.93  Чтв Ноя  6 15:56:46 MSK 2008
       SIGNATURE
 1.92  Чтв Ноя 6 15:49:01 MSK 2008
       is_user_overrated returns not only true/false, but timeout until unlocking
