--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Perl extension Algorithm::FloodControl.
 
+1.96  опять без подписи :-( ну нахрена я его подписать решил?
 1.95  Я хочу есть и спать. А не править баги в этом модуле.
 1.94  Опять проебал
 1.93  Чтв Ноя  6 15:56:46 MSK 2008
