Import of GUGU/Algorithm-FloodControl-1.990000 from CPAN.
gitpan-cpan-distribution: Algorithm-FloodControl
gitpan-cpan-version:      1.990000
gitpan-cpan-path:         GUGU/Algorithm-FloodControl-1.990000.tar.gz
gitpan-cpan-author:       GUGU
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 Revision history for Perl extension Algorithm::FloodControl.
 
+1.99  Bugfixes
 1.96  опять без подписи :-( ну нахрена я его подписать решил?
 1.95  Я хочу есть и спать. А не править баги в этом модуле.
 1.94  Опять проебал
